--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,22 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #51686b;
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
-/* #start-game {
+body {
+    font-family: Georgia, sans-serif;
+    height: 100vh;
+    background-color: rgb(150, 148, 148);
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-} */
+}
 
 #start-game {
-    width: 420px;
-    background-color: #222;
-    padding: 20px;
-    border-radius: 8px;
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 25px;
+    justify-content: center;
 }
 
 .turn {
@@ -27,13 +24,37 @@ body {
 }
 
 .turn.active {
-    display: block;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #000000;
+    padding: 20px;
+    border-radius: 8px;
 }
 
-#player-name {
-    margin: 200px auto 20px auto;
+.btn-container {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
 }
 
-#button-label {
+button {
+    padding: 5px;
+    width: 110px;
+    margin: 10px;
+    background-color: beige;
+    border-radius: 5px;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: blanchedalmond;
+}
+
+/* Code graveyard */
+
+/* #button-label {
     margin: 20px auto;
-}
+} */
